Added New Project to Portfolio and Fixed spelling and grammar

--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
           Hello, I’m Terrance Chang.
         </h1>
         <p>
-          A Full Stack Web Developer here to help build a full fledged website
-          to start working for your business.
+          I'm a Full Stack Web Developer whose designs and implements backend
+          and frontend website specialized to your business.
         </p>
         <p>
-          I’m a web developer and recent graduate of the Front End Web
-          Development Career Path bootcamp at Thinkful. I embrace and find
-          satisfying the challenges of coding in having to problem solve, and
-          seeing new creation come to life on a webpage. My meticulous thought
-          approach to always optimize my code functions and utilizing different
-          libraries is what set my project to have the most enjoyable user
-          experience.
+          As a web developer and recent graduate of the Engineering Flex program
+          at Thinkful. I embrace complex coding challenges and like to problem
+          solve. I find web development and great opportunity for me to to be
+          creative, and seeing my creations come to fruition on a webpage. My
+          meticulous coding approach is to always optimize my code functions,
+          utilizing different libraries/techniques, and make secure website to
+          deter hackers.
         </p>
         <p>
           Away from my computer, I really enjoyed an active lifestyle whether it
@@ -111,7 +111,34 @@
           </div>
         </div>
         <div class="project">
-          <h4>Automotive Quiz App</h4>
+          <h4>Mind of Mediation</h4>
+          <img class="project1Img" src="Mediation-of-mind.png" />
+          <p>
+            Motivate The Mind is a mental health game. The user should feel a
+            sense of positivity and a clearier mindset.The game is played by
+            going through a series of slides that are designed to stimulate the
+            brain's mortor cortex. Each slide will have different content that
+            the user will interpret, but the format will always have a picture,
+            inspiring phrase, and self-reflection.
+          </p>
+          <div class="backUp">
+            <a
+              class="linkColor"
+              target="_blank"
+              href="https://github.com/tchang46343/mind-game-api"
+              >Github</a
+            >
+            |
+            <a
+              class="linkColor"
+              target="_blank"
+              href="https://mindgame-app.now.sh/"
+              >Demo</a
+            >
+          </div>
+        </div>
+        <div class="project">
+          <h5>Quiz App</h5>
           <img class="project1Img" src="quizapp.jpg" />
           <p>
             Automotive Quiz is a testing application that enables service center
@@ -127,7 +154,6 @@
             life by implementing Javascript and JQuery Library making for a
             interactive and responsive program.
           </p>
-
           <div class="backUp">
             <a
               class="linkColor"
