Fixed spelling and grammar, and change title name to project to Motivate The Mind

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
           </div>
         </div>
         <div class="project">
-          <h4>Mind of Mediation</h4>
-          <img class="project1Img" src="Mediation-of-mind.png" />
+          <h4>Motivate the Mind</h4>
+          <img class="project1Img" src="Meditation-of-mind.png" />
           <p>
             Motivate The Mind is a mental health game. The user should feel a
             sense of positivity and a clearier mindset.The game is played by
