Modify description of Motivate the Mind app

--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
             Motivate The Mind is a mental health game. The user should feel a
             sense of positivity and a clearier mindset.The game is played by
             going through a series of slides that are designed to stimulate the
-            brain's mortor cortex. Each slide will have different content that
-            the user will interpret, but the format will always have a picture,
-            inspiring phrase, and self-reflection.
+            brain's mortor cortex. The application is built on many different
+            programming languages. The front-end is built using React,
+            JavaScript, HTML5, and CSS3. The backend is supported by NodeJS,
+            Express, and Postgresql. Together the frontend and backend work well
+            together demonstrating the knowledge of diffculty I have attained
+            over my coding career.
           </p>
           <div class="backUp">
             <a
