Corrected issues base on grader feedback

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <nav id="page-nav">
-      <div class="name">Terrance Alexander Chang</div>
+      <div class="name">Terrance Chang</div>
       <div class="links">
         <label for="hamburger">&#9776;</label>
         <input type="checkbox" id="hamburger" />
@@ -39,7 +39,12 @@
             >
           </li>
           <li>
-            <a class="codeing" href="https://github.com/tchang46343">Github</a>
+            <a
+              class="codeing"
+              href="https://github.com/tchang46343"
+              target="_blank"
+              >Github</a
+            >
           </li>
         </ul>
       </div>
@@ -48,32 +53,38 @@
       <header class="picture">
         <img src="tcPic.jpg" />
       </header>
-      <section class="aboutMe" id="aboutMe">
+
+      <section id="aboutMe">
         <h1>
           Hello, I’m Terrance Chang.
         </h1>
         <p>
-          I'm a Full Stack Web Developer whose designs and implements backend
-          and frontend website specialized to your business.
+          I'm a Full Stack Web Developer, and I can bring value to your company
+          by designing and implementing a custom website that your customers
+          will enjoy.
         </p>
         <p>
-          As a web developer and recent graduate of the Engineering Flex program
-          at Thinkful. I embrace complex coding challenges and like to problem
-          solve. I find web development and great opportunity for me to to be
-          creative, and seeing my creations come to fruition on a webpage. My
-          meticulous coding approach is to always optimize my code functions,
-          utilizing different libraries/techniques, and make secure website to
-          deter hackers.
+          As a web developer I embrace difficult coding problems, and whether
+          working within a team or working indivdually the knowledge to gain by
+          solving diffucult problem will further advance my software develop
+          career. Moreover web development presents the opportunity for me to
+          express my design creativity in the aspect of utilizing technique such
+          as choose the right color palette, experimenting with different fonts,
+          and responsive design. Finally, my meticulous coding approach
+          functionality of website design is to always optimize my code
+          functions, use different libraries when appropriate, and secure
+          website to prevent hacking vulnerability.
         </p>
         <p>
-          Away from my computer, I really enjoyed an active lifestyle whether it
-          be working out at the gym, walking my cat, or fixing cars. For me it’s
+          Away from my computer, I really enjoy a active lifestyle whether it be
+          working out at the gym, walking my cat, or fixing cars. For me it’s
           important to find the happy medium of detoxing from technology by
           taking up alternative hobbies. I’m a strong believer in DIY (Do It
           Yourself) and a student of self-improvement by speaking with experts
           of multiple subject matters.
         </p>
       </section>
+
       <!-----------------------------------------------------VISUAL BREAK NEED FOR KNOWING SECTION BELOW IS PORTFOLIO------------------------------------------------------------------------------------------->
       <section id="projects">
         <header class="projectTitle">
@@ -86,9 +97,9 @@
           <img class="project1Img" src="Build-It.png" />
           <p>
             Build-It is a search engine that helps users find information on how
-            to complete their own DIY projects. Users can utilize the search
-            engine to find how to video on building videos, and get inspired
-            with product item to help with decorating a project. The programming
+            to complete their own DIY projects. A user can utilize the search
+            engine to find how-to-video on building videos, and get inspired
+            with product items to help with decorating projects. The programming
             languages used to build the application are HTML, CSS, JavaScript,
             and jQuery library. Finally in order to pull the data for the search
             engine, the YouTube and Etsy API were needed to return the results
@@ -114,15 +125,16 @@
           <h4>Motivate the Mind</h4>
           <img class="project1Img" src="Meditation-of-mind.png" />
           <p>
-            Motivate The Mind is a mental health game. The user should feel a
-            sense of positivity and a clearier mindset.The game is played by
+            Motivate The Mind is a mental health game design to relieve stress
+            and anxiety. The user should feel a sense of positivity and have a
+            clearier mindset after the game is played. The game is played by
             going through a series of slides that are designed to stimulate the
             brain's mortor cortex. The application is built on many different
             programming languages. The front-end is built using React,
             JavaScript, HTML5, and CSS3. The backend is supported by NodeJS,
             Express, and Postgresql. Together the frontend and backend work well
-            together demonstrating the knowledge of diffculty I have attained
-            over my coding career.
+            together demonstrating the knowledge I have attained over my coding
+            career.
           </p>
           <div class="backUp">
             <a
@@ -144,18 +156,18 @@
           <h5>Quiz App</h5>
           <img class="project1Img" src="quizapp.jpg" />
           <p>
-            Automotive Quiz is a testing application that enables service center
-            to test a mechanics knowledge. The program allows the user to go
-            through a series of questions, and tells the user if their answer
-            was right or wrong. Finally, the program brings the user to a result
-            page where after finishing all the questions they get their results
-            on whether they passed the test. Utilization of this program can now
-            let service center companies conduct a more thorough examination of
-            a candidate before investing. Using HTML5 and CSS to lay the
-            foundation of the program we have transition from idea, to proof of
-            concept. Furthermore, this program functionality really comes to
-            life by implementing Javascript and JQuery Library making for a
-            interactive and responsive program.
+            Automotive Quiz is a testing application that enables service
+            centers to test a mechanics knowledge. The application allows the
+            user to go through a series of questions, and tells the user if
+            their answer was right or wrong. Finally, the application brings the
+            user to a result page where after finishing all the questions they
+            get their results on whether they passed the test. Utilization of
+            this application can be a supplemental feature during the interview
+            process of hiring a potential service technician. Programming
+            lanuages used were HTML5 and CSS to build and design the foundation
+            of the application. Furthermore, this application functionality is
+            supported with the implementation Javascript and JQuery library,
+            making for a interactive and responsive application.
           </p>
           <div class="backUp">
             <a
@@ -178,11 +190,13 @@
     <footer id="contacts">
       <ul class="middle">
         <li>
-          To setup a meeting, please email me at:
-          <a href="mailto:tchang46343@gmail.com"> tchang46343@gmail.com</a>
+          To setup a meeting, please click on email address:
+          <a href="mailto:tchang46343@gmail.com" target="_blank">
+            tchang46343@gmail.com</a
+          >
         </li>
       </ul>
     </footer>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
   </body>
 </html>
