Fixed Spelling and grammar error.

--- a/index.html
+++ b/index.html
@@ -22,37 +22,38 @@
     <title>Terrance Chang Portfolio</title>
   </head>
   <body>
-    <nav id="page-nav">
-      <div class="name">Terrance Chang</div>
-      <div class="links">
-        <label for="hamburger">&#9776;</label>
-        <input type="checkbox" id="hamburger" />
-        <ul>
-          <li><a class="nav-link scroll" href="#projects">Projects</a></li>
-          <li><a class="nav-link scroll" href="#aboutMe">About Me</a></li>
-          <li>
-            <a
-              class="social"
-              href="https://www.linkedin.com/in/terrance-chang-1496915b/"
-              target="_blank"
-              >LinkedIn</a
-            >
-          </li>
-          <li>
-            <a
-              class="codeing"
-              href="https://github.com/tchang46343"
-              target="_blank"
-              >Github</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <header class="picture">
+      <nav id="page-nav">
+        <div class="name">Terrance Chang</div>
+        <div class="links">
+          <label for="hamburger">&#9776;</label>
+          <input type="checkbox" id="hamburger" />
+          <ul>
+            <li><a class="nav-link scroll" href="#projects">Projects</a></li>
+            <li><a class="nav-link scroll" href="#aboutMe">About Me</a></li>
+            <li>
+              <a
+                class="social"
+                href="https://www.linkedin.com/in/terrance-chang-1496915b/"
+                target="_blank"
+                >LinkedIn</a
+              >
+            </li>
+            <li>
+              <a
+                class="codeing"
+                href="https://github.com/tchang46343"
+                target="_blank"
+                >Github</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
     <main role="main">
-      <header class="picture">
-        <img src="tcPic.jpg" />
-      </header>
+      <img src="tcPic.jpg" />
 
       <section id="aboutMe">
         <h1>
@@ -64,24 +65,25 @@
           will enjoy.
         </p>
         <p>
-          As a web developer I embrace difficult coding problems, and whether
-          working within a team or working indivdually the knowledge to gain by
-          solving diffucult problem will further advance my software develop
-          career. Moreover web development presents the opportunity for me to
-          express my design creativity in the aspect of utilizing technique such
-          as choose the right color palette, experimenting with different fonts,
-          and responsive design. Finally, my meticulous coding approach
-          functionality of website design is to always optimize my code
-          functions, use different libraries when appropriate, and secure
-          website to prevent hacking vulnerability.
+          As a web developer, I embrace difficult coding problems, and whether
+          working within a team or working individually the knowledge to gain by
+          solving a difficult problem will further advance my software
+          development career. In addition, web development presents the
+          opportunity for me to express my design creativity. By utilizing
+          methods such as selecting a color palette, experimenting with
+          different fonts, and having a responsive design can alter the user
+          experience. Finally, my meticulous coding approach to building a
+          website is to always optimize my code functions, use different
+          libraries when appropriate, and secure websites to prevent hacking
+          vulnerability.
         </p>
         <p>
-          Away from my computer, I really enjoy a active lifestyle whether it be
-          working out at the gym, walking my cat, or fixing cars. For me it’s
-          important to find the happy medium of detoxing from technology by
-          taking up alternative hobbies. I’m a strong believer in DIY (Do It
-          Yourself) and a student of self-improvement by speaking with experts
-          of multiple subject matters.
+          Away from my computer, I enjoy an active lifestyle whether it be
+          working out at the gym, walking my cat, or repairing cars. For me,
+          it’s important to find a happy medium of detoxing from technology and
+          having a clear mindset. One way I clear my head is going fishing,
+          fishing is a great way to learn how to be patient and get a sense of
+          gratification for the things we have in life.
         </p>
       </section>
 
@@ -96,14 +98,14 @@
           <h3>Build-It</h3>
           <img class="project1Img" src="Build-It.png" />
           <p>
-            Build-It is a search engine that helps users find information on how
-            to complete their own DIY projects. A user can utilize the search
-            engine to find how-to-video on building videos, and get inspired
-            with product items to help with decorating projects. The programming
-            languages used to build the application are HTML, CSS, JavaScript,
-            and jQuery library. Finally in order to pull the data for the search
-            engine, the YouTube and Etsy API were needed to return the results
-            back to the users.
+            Build-It is a search engine application that helps users find
+            information on how to complete their DIY projects. A user can
+            utilize the search engine to find how-to-video on building videos,
+            and get inspired with product items to help with decorating their
+            projects. The programming languages used to build the application
+            are HTML, CSS, JavaScript, and jQuery library. Finally, to pull the
+            data for the search engine, the YouTube and Etsy API were needed to
+            send back the results to the users.
           </p>
           <div class="backUp">
             <a
@@ -125,16 +127,15 @@
           <h4>Motivate the Mind</h4>
           <img class="project1Img" src="Meditation-of-mind.png" />
           <p>
-            Motivate The Mind is a mental health game design to relieve stress
+            Motivate The Mind is a mental health game designed to relieve stress
             and anxiety. The user should feel a sense of positivity and have a
-            clearier mindset after the game is played. The game is played by
+            clearer mindset after the game is played. The game is played by
             going through a series of slides that are designed to stimulate the
-            brain's mortor cortex. The application is built on many different
+            brain's motor cortex. The application is built on many different
             programming languages. The front-end is built using React,
             JavaScript, HTML5, and CSS3. The backend is supported by NodeJS,
             Express, and Postgresql. Together the frontend and backend work well
-            together demonstrating the knowledge I have attained over my coding
-            career.
+            demonstrating the knowledge I have attained over my coding career.
           </p>
           <div class="backUp">
             <a
@@ -157,17 +158,17 @@
           <img class="project1Img" src="quizapp.jpg" />
           <p>
             Automotive Quiz is a testing application that enables service
-            centers to test a mechanics knowledge. The application allows the
-            user to go through a series of questions, and tells the user if
+            centers to test mechanic's knowledge. The application allows the
+            user to go through a series of questions and tells the employer if
             their answer was right or wrong. Finally, the application brings the
             user to a result page where after finishing all the questions they
             get their results on whether they passed the test. Utilization of
             this application can be a supplemental feature during the interview
             process of hiring a potential service technician. Programming
-            lanuages used were HTML5 and CSS to build and design the foundation
-            of the application. Furthermore, this application functionality is
-            supported with the implementation Javascript and JQuery library,
-            making for a interactive and responsive application.
+            languages used were HTML5 and CSS to build the foundation of the
+            application. Furthermore, this application functionality is
+            supported by the implementation Javascript and JQuery library,
+            making for an interactive and responsive application.
           </p>
           <div class="backUp">
             <a
