--- a/index.html
+++ b/index.html
@@ -23,35 +23,34 @@
   </head>
   <body>
     <header class="navIntro">
+      <div class="name">Terrance Chang</div>
       <nav id="page-nav">
-        <div class="name">Terrance Chang</div>
-        <div class="links">
-          <label for="hamburger">&#9776;</label>
-          <input type="checkbox" id="hamburger" />
-          <ul>
-            <li><a class="nav-link scroll" href="#projects">Projects</a></li>
-            <li><a class="nav-link scroll" href="#aboutMe">About Me</a></li>
-            <li>
-              <a
-                class="social"
-                href="https://www.linkedin.com/in/terrance-chang-1496915b/"
-                target="_blank"
-                >LinkedIn</a
-              >
-            </li>
-            <li>
-              <a
-                class="codeing"
-                href="https://github.com/tchang46343"
-                target="_blank"
-                >Github</a
-              >
-            </li>
-            <li>
-              <a class="nav-link scroll" href="#contact">Contact Info</a>
-            </li>
-          </ul>
-        </div>
+        <!-- <div class="name">Terrance Chang</div> -->
+        <label class="burger" for="hamburger">&#9776;</label>
+        <input type="checkbox" id="hamburger" />
+        <ul class="links">
+          <li><a class="nav-link scroll" href="#projects">Projects</a></li>
+          <li><a class="nav-link scroll" href="#aboutMe">About Me</a></li>
+          <li>
+            <a
+              class="social"
+              href="https://www.linkedin.com/in/terrance-chang-1496915b/"
+              target="_blank"
+              >LinkedIn</a
+            >
+          </li>
+          <li>
+            <a
+              class="codeing"
+              href="https://github.com/tchang46343"
+              target="_blank"
+              >Github</a
+            >
+          </li>
+          <li>
+            <a class="nav-link scroll" href="#contact">Contact Info</a>
+          </li>
+        </ul>
       </nav>
     </header>
 
