Correct Style issue and grammar errors from grader feedback

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css?family=Overpass&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       type="text/css"
       href="https://necolas.github.io/normalize.css/latest/normalize.css"
@@ -48,7 +52,7 @@
             >
           </li>
           <li>
-            <a class="nav-link scroll" href="#contact">Contact Info</a>
+            <a class="nav-link scroll" href="#contacts">Contact</a>
           </li>
         </ul>
       </nav>
@@ -58,7 +62,7 @@
       <img src="tcPic.jpg" alt="Terrance Chang Pic" />
 
       <section id="aboutMe">
-        <h1>
+        <h1 class="grabberIntro">
           Hello, I’m Terrance Chang.
         </h1>
         <p>
@@ -91,11 +95,10 @@
 
       <!-----------------------------------------------------VISUAL BREAK NEED FOR KNOWING SECTION BELOW IS PORTFOLIO------------------------------------------------------------------------------------------->
       <section id="projects">
-        <header class="projectTitle">
-          <h2 class="h1">
-            Projects
-          </h2>
-        </header>
+        <h2 class="projectTitle">
+          Projects
+        </h2>
+
         <div class="project">
           <h3>Build-It</h3>
           <img class="project1Img" src="Build-It.png" alt="Build-It App" />
@@ -129,7 +132,7 @@
           <h4>Motivate the Mind</h4>
           <img
             class="project1Img"
-            src="Meditation-of-mind.png"
+            src="Mediationofmind.png"
             alt="Meditation-of-mind App"
           />
           <p>
@@ -203,11 +206,11 @@
     </main>
     <div id="contacts">
       <header class="connect">
-        Have a question or want to setup a meeting?
+        Contacts:
       </header>
       <p>
-        Send me a email and please be sure to leave your name, phone number, and
-        your company name.
+        Connect via email, please leave your name, phone number, and company
+        name.
       </p>
       <p>
         Click On The Email To Get Started:
